--- a/AppCast.xaml
+++ b/AppCast.xaml
@@ -6,6 +6,17 @@
 		<description>LuaSTG Editor Sharp X is a clone/fork of LuaSTG Editor Sharp aimed towards improving the original with new functions and altered behaviour.</description>
 		<language>en</language>
 		<item>
+			<title>Version 0.78.1</title>
+			<sparkle:releaseNotesLink>
+				https://raw.githubusercontent.com/Sharp-X-Team/LuaSTG-Editor-Sharp-X/main/LuaSTGEditorSharp/Changelogs/0.78.1_changelog.md
+			</sparkle:releaseNotesLink>
+			<pubDate>Thu, 9 Dec 2025 00:00:00 +0000</pubDate>
+			<enclosure url="https://github.com/Sharp-X-Team/LuaSTG-Editor-Sharp-X/releases/download/0.78.1/LuaSTG.Editor.Sharp.X.v0.78.1.exe"
+                       sparkle:version="0.78.1"
+                       sparkle:os="windows"
+                       type="application/octet-stream"/>
+		</item>
+		<item>
 			<title>Version 0.78.0</title>
 			<sparkle:releaseNotesLink>
 				https://raw.githubusercontent.com/Sharp-X-Team/LuaSTG-Editor-Sharp-X/main/LuaSTGEditorSharp/Changelogs/0.78.0_changelog.md
